Update query model API
